<?xml version="1.0" encoding="utf-8"?>

<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.WelcomeActivity">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/welcomeLogo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/welcomelogo"
            android:layout_width="300dp"
            android:layout_height="300dp"/>

        <TextView
            android:id="@+id/welcomeText"
            android:text="@string/welcomeText"
            android:textStyle="bold"
            android:textSize="24sp"
            android:gravity="center"
            android:fontFamily="casual"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcomeLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/descText"
            android:text="@string/desc"
            android:visibility="visible"
            android:gravity="center"
            android:fontFamily="casual"
            android:paddingTop="12dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:background="#149bd6"
            android:paddingBottom="12dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/instructions"
            android:text="@string/instructions"
            android:visibility="visible"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descText"
            app:layout_constraintBottom_toTopOf="@+id/button_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>





        <TextView
            android:id="@+id/button_start"
            android:text="@string/get_started"
            android:textSize="22sp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="50dp"
            android:textColor="@color/white"
            android:background="@drawable/background_textview_button"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="22dp"
            android:layout_marginEnd="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:src="@drawable/arrowright"
            android:layout_marginEnd="14dp"
            app:layout_constraintTop_toTopOf="@+id/button_start"
            app:layout_constraintBottom_toBottomOf="@+id/button_start"
            app:layout_constraintEnd_toEndOf="@+id/button_start"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
