<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        tools:context=".presentation.MainActivity">

        <TextView
            android:id="@+id/textLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#73e0ff"
            android:fontFamily="casual"
            android:paddingStart="90dp"
            android:paddingEnd="0dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/expressnotes"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:contentDescription="@string/pen"
            android:src="@drawable/pen"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toTopOf="@+id/textLogo"
            app:layout_constraintEnd_toEndOf="@+id/textLogo"
            app:layout_constraintBottom_toBottomOf="@+id/textLogo"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <ImageView
            android:id="@+id/mainLogo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/mainlogo"
            android:src="@drawable/mainlogo4"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_notes_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="120dp"
            android:clipToPadding="false"
            android:visibility="visible"
            app:spanCount="2"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/note_enabled"
            tools:visibility="gone" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_add_notee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:clickable="true"
            android:contentDescription="@string/adding_note"
            android:focusable="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_input_add" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/button_add_note"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/yellowbuttonplus" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>